Tags are now shown at posts, isn't final tho

--- a/posts/nl/_posts/2025-10-18-jekyll.md
+++ b/posts/nl/_posts/2025-10-18-jekyll.md
@@ -2,6 +2,7 @@
 layout: post
 title: Het is weer zover — deze website is weer eens veranderd
 lang: Nederlands
+tag: Tech
 ---
 
 Ik heb voor de zevende keer mijn website vernieuwd. In — wat? — 3 jaar ofzo. Maar nu gebruik ik Jekyll, een static site generator, met het thema Hyde. En ik moet zeggen... wat een genot om alles niet vanaf nul te doen.
